# WordCounter

./: .gitignore  CMakeLists.txt  README.md
Master/: CMakeLists.txt
Master/include/wc/: MapTask.hpp  MasterTask.hpp  ReduceTask.hpp
Master/src/: App.cpp  MasterTask.cpp
Shared/: CMakeLists.txt
Shared/include/wc/: MapMessage.hpp  MessageHeader.hpp  OkMessage.hpp  PingMessage.hpp  ReduceMessage.hpp
Shared/src/: MapMessage.cpp  OkMessage.cpp  PingMessage.cpp  ReduceMessage.cpp
Worker/: CMakeLists.txt
Worker/src/: App.cpp
